# youtube-video-summarizer

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml
tests/: test_transcript.py  test_url_parser.py  test_youtube_video.py  test_youtube_video_summarizer.py
youtube_summarizer/: __init__.py  main.py  summarizer.py  tokenizer.py  transcript.py  url_parser.py  video_transcript.py  video_usage_meta.py  youtube_video.py  youtube_video_qa.py  youtube_video_summarizer.py
youtube_summarizer/cli/: entrypoint.py
youtube_summarizer/clients/: __init__.py  openai_client.py  youtube_transcript_client.py
youtube_summarizer/types/: __init__.py
youtube_summarizer/utils/: tokenizer.py  url_parser.py
