[tool.poetry]
name = "youtube-video-summarizer"
version = "0.4.0"
description = "Summarize YouTube videos using GPT models."
authors = ["Jake Cyr <cyrjake@gmail.com>"]
readme = "README.md"
packages = [{include = "youtube_summarizer"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.28.1"
tiktoken = "^0.5.1"
youtube-transcript-api = "^0.6.1"
loguru = "^0.7.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
ruff = "^0.0.292"
pytest = "^7.4.2"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
